--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,5 +16,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView" android:layout_width="match_parent" android:layout_height="match_parent"
-        android:orientation="vertical" app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>
+        android:orientation="vertical" app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:listitem="@layout/grid_item"
+        tools:spanCount="3"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
