--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView" android:layout_width="match_parent" android:layout_height="match_parent"
         android:orientation="vertical" app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:listitem="@layout/grid_item"
-        tools:spanCount="3"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" app:spanCount="3"
+        tools:listitem="@layout/grid_item"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
